# CookieOS

./: Cargo.toml  Dockerfile  README.md  ai_shell.py  aluminum-desktop.service  app_converter.sh  cookie_daemon.py  docker-compose.yml  doctor_image.sh  fix_docker.sh  flash.sh  package-lock.json  package.json  ui_preview.html
android_files_app/src/main/: AndroidManifest.xml
android_settings_app/: build.gradle
android_settings_app/src/main/: AndroidManifest.xml
cookieosFOLDER/: README_FLASHING.md  ai_app_builder.py  autostart  build_image.sh  server.ts
cookieosFOLDER/android_files_app/: build.gradle  settings.gradle
cookieosFOLDER/android_settings_app/: settings.gradle
cookieosFOLDER/src/: main.rs  style.css
docs/: index.html  style.css
